This commit:
- Brings the quicksetup code to "internationalized with possible i18n bugs" to address issue 1629.  In other words I moved messages formerly coded as string literals (with the exception of log messages and non-ApplicationException exception messages) presented to the user into resource bundles.

- Fixes small miscellaneous issues that Idea complains about (e.g. unnecessary casts, variable initialization).

- Moves some commonly defined string literal and constants to a single Constants file.

- Trimmed a little dead code.